--- a/app/views/commandes/_form.html.erb
+++ b/app/views/commandes/_form.html.erb
@@ -1,4 +1,4 @@
-<%= turbo_frame_tag "commande_form" do %>
+<%#= turbo_frame_tag "commande_form" do %>
 
   <div class="card mx-2 mb-3 p-2 light-beige-colored shadow-sm">
 
@@ -69,4 +69,4 @@
   
   </div>
 
-<% end %>
+<%# end %>
