produit create passer coef multi si prix achat et coef existe

--- a/app/views/admin_parameters/_admin_parameter.html.erb
+++ b/app/views/admin_parameters/_admin_parameter.html.erb
@@ -5,6 +5,12 @@
       <%= admin_parameter.tx_tva %>
     </p>
 
+    <p>
+      <strong>coef_prix_achat_location:</strong>
+      <%= admin_parameter.coef_prix_achat_location %>
+    </p>
+    
+
     <%= links_record(admin_parameter) %>  
 
   </div>
