base analyses avec charts js et graph - filtre ok

--- a/app/views/home_admin/_blocLarge.html.erb
+++ b/app/views/home_admin/_blocLarge.html.erb
@@ -10,7 +10,7 @@
         <%= options_supplementaires_link(users_path, "fa-user-circle", "Comptes", "btn-outline-primary") %>
         <%= options_supplementaires_link(profiles_path, "fa-user-gear", "Profiles", "btn-outline-dark") %>
         <%= options_supplementaires_link(root_path, "fa-bullhorn", "Marketing", "btn-outline-warning") %>
-        <%= options_supplementaires_link(root_path, "fa-chart-line", "Analyses", "btn-outline-success") %>
+        <%= options_supplementaires_link(analyses_index_path, "fa-chart-line", "Analyses", "btn-outline-success") %>
         <%= options_supplementaires_link(etiquettes_index_path, "fa-tags", "Etiquettes", "btn-outline-secondary") %>
         <%= options_supplementaires_link(stock_index_path, "fa-box-open", "Stocks", "btn-outline-danger") %>
         <%= options_supplementaires_link(fournisseurs_path, "fa-industry", "Fournisseurs", "btn-outline-dark") %>
