--- a/app/views/shared/_navbar_admin.html.erb
+++ b/app/views/shared/_navbar_admin.html.erb
@@ -12,7 +12,7 @@
         <%= nav_link(produits_path, "Produits", "fa-shirt") %>
         <%= nav_link(commandes_path, "Commandes", "fa-file-invoice") %>
         <%= nav_link(meetings_path, "Calendrier", "fa-calendar") %>
-        <%= nav_link(root_path, "Analyses", "fa-chart-line") %>
+        <%= nav_link(analyses_index_path, "Analyses", "fa-chart-line") %>
         <%= nav_link(root_path, "Marketing", "fa-bullhorn") %>
       </ul>
       <form class="d-flex" role="search">
