location longue duree de l'article ok

--- a/app/views/admin_parameters/_admin_parameter.html.erb
+++ b/app/views/admin_parameters/_admin_parameter.html.erb
@@ -9,6 +9,11 @@
       <strong>coef_prix_achat_location:</strong>
       <%= admin_parameter.coef_prix_achat_location %>
     </p>
+
+     <p>
+      <strong>majoration longueduree:</strong>
+      <%= admin_parameter.coef_longue_duree %>
+    </p>
     
 
     <%= links_record(admin_parameter) %>  
