--- a/app/views/admin_parameters/_form.html.erb
+++ b/app/views/admin_parameters/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <%= custom_form_elements(form, 
-    [:tx_tva, :number_field]
+    [:tx_tva, :number_field], [:coef_longue_duree, :number_field]
   ) %>
 
   <div class="input-group input-group mx-1 px-2">
