--- a/app/views/analyses/_chartPieCa.html.erb
+++ b/app/views/analyses/_chartPieCa.html.erb
@@ -18,7 +18,7 @@
       ctx.textAlign = "center";
       ctx.textBaseline = "middle";
       ctx.font = "bold 12px sans-serif";
-      const text = "total " + nbTotalCa ;
+      const text = "TTC: " + nbTotalCa + " - HT: " +  Math.round(nbTotalCa / 1.2);
       const textWidth = ctx.measureText(text).width;
       const x = chart.getDatasetMeta(0).data[0].x;
       const y = chart.getDatasetMeta(0).data[0].y;
