base gestion du stock par date de dispo

--- a/app/views/produits/_produit.html.erb
+++ b/app/views/produits/_produit.html.erb
@@ -25,7 +25,7 @@
             <%= badge_prixvente_produit(produit) %>
             <%= badge_couleur_produit(produit) %> 
             <%= badge_taille_produit(produit) %> 
-            <p class="m-1 mt-3"><%= badge_disponibilite(produit) %> </p> 
+            <p class="m-1 mt-3"><%= badge_disponibilite(produit, Time.now.to_date) %> </p> 
         </div>
           <div class="mt-auto">
             <%= links_record(produit) %>  
