--- a/app/views/selection_produit/_produits_filtres.html.erb
+++ b/app/views/selection_produit/_produits_filtres.html.erb
@@ -1,12 +1,12 @@
 <div class="container-fluid p-2">
     <% if @produits.any? %>
         <% @produits.each do |produit| %>
-            <% if est_disponible(produit) %>
+            <% if est_disponible(produit, @commande.debutloc.to_date ) %>
                 <%= link_to selection_produit_path(produit: produit, article: @article), class: "text-decoration-none" do %>
-                    <%= produit_selection(produit) %>
+                    <%= produit_selection(produit, @commande) %>
                 <% end %>
             <% else %>
-                <%= produit_selection(produit) %>
+                <%= produit_selection(produit, @commande ) %>
             <% end %>
         <% end %>
     <% end %>
