--- a/app/views/stock/index.html.erb
+++ b/app/views/stock/index.html.erb
@@ -2,10 +2,27 @@
 <%= bandeau_entete("Stock", "box", "", "your-search") %>
 
 
-<div class="card mx-2 my-3 p-3 light-beige-colored shadow-sm">
-  <p> Total produits : <span class="fw-bold"> <%= total_produits(@produits) %> </span> </p> 
-  <p> Total loués : <span class="fw-bold"> <%= total_loues(@produits) %> </span> </p> 
-  <p> Total vendus : <span class="fw-bold"> <%= total_vendus(@produits) %> </span> </p> 
-  <p> Restant : <span class="fw-bold"> <%= produits_restants(@produits) %> </span> </p> 
+<div class="card mx-2 my-3 light-beige-colored shadow-sm">
+  <div class="card-header fw-bold"> 
+    général
+  </div>
+  <div class="card-body"> 
+    <p> Total produits : <span class="fw-bold"> <%= total_produits(@produits) %> </span> </p> 
+    <p> Total loués : <span class="fw-bold"> <%= total_loues(@produits) %> </span> </p> 
+    <p> Total vendus : <span class="fw-bold"> <%= total_vendus(@produits) %> </span> </p> 
+    <p> Restant : <span class="fw-bold"> <%= produits_restants(@produits, Time.now.to_date) %> </span> </p> 
+  </div>
+</div>
+
+
+<div class="card mx-2 my-3 light-beige-colored shadow-sm">
+  <div class="card-header fw-bold"> 
+    statut produits loués
+  </div>
+  <div class="card-body"> 
+    <p> loués non-retirés :  <span class="fw-bold"> <%= articles_loues_in_commandes_non_retires %> </span> </p> 
+    <p> loués retirés :   <span class="fw-bold"> <%= articles_loues_in_commandes_retires %> </span>  </p> 
+    <p> loués rendus :   <span class="fw-bold"> <%= articles_loues_in_commandes_rendus %> </span>  </p> 
+  </div>
 
 </div>
