--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -3,7 +3,6 @@
 
 <%= render 'meetings/meetings' %>
 
-<div>
-  <%= link_to "Back to clients", clients_path %>
+<hr>
 
-</div>
+<%= return_model_index_button("Retour vers clients", clients_path) %>
