--- a/app/views/clients/_client.html.erb
+++ b/app/views/clients/_client.html.erb
@@ -1,78 +1,52 @@
 <div id="<%= dom_id client %>"class="my-2">
 
-  <div class="card mx-2 my-3 p-3 light-beige-colored shadow-sm">
+  <div class="card mx-2 mb-3 light-beige-colored shadow-sm">
+    <div class="card-body p-0">
+      <div class="row g-0">
+        <div class="col-2 p-2 d-flex align-items-center justify-content-center">
+          <i class="fa fa-user text-secondary fa-4x"></i>
+        </div>
+        <div class="col-10 d-flex flex-column p-2">
+          <h5 class="card-title">
+
+            <%= field_with_label("type: ", client.propart)  %>
+            <%= client.prenom %>
+            <%= client.nom %>
+
+
+            <%= link_to "", "#collapseClient#{dom_id(client)}", 
+                  class: "btn btn-sm btn-outline-primary fa-solid fa-eye m-1", "data-bs-toggle": "collapse", 
+                  role: "button", "aria-expanded": "false", "aria-controls": "collapseClient#{dom_id(client)}" %>
+
+          </h5>
+
+          <div class="text-end">
+            <%= links_record(client) %>  
+          </div>
+        </div>
+
+      </div>
   
-    <p>
-      <strong>Prenom:</strong>
-      <%= client.prenom %>
-    </p>
+      <div class="collapse px-2" id="collapseClient<%= dom_id(client) %>">
 
-    <p>
-      <strong>Nom:</strong>
-      <%= client.nom %>
-    </p>
+       <hr>
 
-    <p>
-      <strong>Commentaires:</strong>
-      <%= client.commentaires %>
-    </p>
+        <%= field_with_label("type: ", client.propart)  %>
+        <%= field_with_label("commentaires: ", client.commentaires)  %>
+        <%= field_with_label("intitule: ", client.intitule)  %>
+        <%= field_with_label("tel: ", client.tel)  %>
+        <%= field_with_label("tel2: ", client.tel2)  %>
+        <%= field_with_label("mail: ", client.mail)  %>
+        <%= field_with_label("mail2: ", client.mail2)  %>
+        <%= field_with_label("adresse: ", client.adresse)  %>
+        <%= field_with_label("cp: ", client.cp)  %>
+        <%= field_with_label("ville: ", client.ville)  %>
+        <%= field_with_label("pays: ", client.pays)  %>
+        <%= field_with_label("contact: ", client.contact)  %>
 
-    <p>
-      <strong>Propart:</strong>
-      <%= client.propart %>
-    </p>
+      </div>
 
-    <p>
-      <strong>Intitule:</strong>
-      <%= client.intitule %>
-    </p>
-
-    <p>
-      <strong>Tel:</strong>
-      <%= client.tel %>
-    </p>
-
-    <p>
-      <strong>Tel2:</strong>
-      <%= client.tel2 %>
-    </p>
-
-    <p>
-      <strong>Mail:</strong>
-      <%= client.mail %>
-    </p>
-
-    <p>
-      <strong>Mail2:</strong>
-      <%= client.mail2 %>
-    </p>
-
-    <p>
-      <strong>Adresse:</strong>
-      <%= client.adresse %>
-    </p>
-
-    <p>
-      <strong>Cp:</strong>
-      <%= client.cp %>
-    </p>
-
-    <p>
-      <strong>Ville:</strong>
-      <%= client.ville %>
-    </p>
-
-    <p>
-      <strong>Pays:</strong>
-      <%= client.pays %>
-    </p>
-
-    <p>
-      <strong>Contact:</strong>
-      <%= client.contact %>
-    </p>
-
-    <%= links_record(client) %>  
+    </div>
 
   </div>
 
