--- a/app/views/home_admin/_blocLarge.html.erb
+++ b/app/views/home_admin/_blocLarge.html.erb
@@ -15,11 +15,11 @@
         <%= options_supplementaires_link(stock_index_path, "fa-box-open", "Stocks", "btn-outline-danger") %>
         <%= options_supplementaires_link(fournisseurs_path, "fa-industry", "Fournisseurs", "btn-outline-dark") %>
         <%= options_supplementaires_link(ensembles_path, "fa-cubes", "Gestion des Ensembles", "btn-outline-primary") %>
-        <%= options_supplementaires_link(categorie_produits_path, "fa-cubes", "Cat. produits", "btn-outline-dark") %>
-        <%= options_supplementaires_link(type_produits_path, "fa-cubes", "Type. produits", "btn-outline-primary") %>
+        <%= options_supplementaires_link(categorie_produits_path, "fa-layer-group", "Cat. produits", "btn-outline-dark") %>
+        <%= options_supplementaires_link(type_produits_path, "fa-list-ul", "Type. produits", "btn-outline-primary") %>
 
-        <%= options_supplementaires_link(couleurs_path, "fa-cubes", "Couleurs", "btn-outline-dark") %>
-        <%= options_supplementaires_link(tailles_path, "fa-cubes", "Tailles", "btn-outline-dark") %>
+        <%= options_supplementaires_link(couleurs_path, "fa-palette", "Couleurs", "btn-outline-dark") %>
+        <%= options_supplementaires_link(tailles_path, "fa-ruler", "Tailles", "btn-outline-dark") %>
         <%= options_supplementaires_link(admin_parameters_path, "fa-screwdriver-wrench", "Parametres", "btn-outline-warning") %>
 
         <%# faire des regrouepents avc des menus deroulants par cat : ex parametre %>
