format commande etc

--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -12,7 +12,7 @@
 
         <h4 class="fw-bold"> <%= article.produit.nom %>  </h4>
 
-        <%= article.locvente %>  
+       <span class="fw-bold"> <%= article.locvente %> </span>
         qté.: <%= article.quantite %>  
         prix: <%= article.prix %>  
         total: <%= article.total %>  
