--- a/app/views/commandes/index.html.erb
+++ b/app/views/commandes/index.html.erb
@@ -1,4 +1,4 @@
-<%= bandeau_entete("Commandes", "shirt", @commandes.count, "your-search") %>
+<%= bandeau_entete("Commandes", "file-invoice", @commandes.count, "your-search") %>
 
 <%= bloc_nouveau(Commande) %>
 
