--- a/app/views/produits/show.html.erb
+++ b/app/views/produits/show.html.erb
@@ -5,4 +5,8 @@
 
 <%= render 'stock' %>
 
+<%# afficher les commandes avec cet article triées par date %>
+
+<%= render 'commandes_liees' %>
+
 <%= return_model_index_button("Retour vers produits", produits_path) %>
