--- a/app/views/produits/_stock.html.erb
+++ b/app/views/produits/_stock.html.erb
@@ -9,7 +9,7 @@
         <p> Total produits : <span class="fw-bold"> <%= total_produits(@produit) %> </span> </p> 
         <p> Total loués : <span class="fw-bold"> <%= total_loues(@produit) %> </span> </p> 
         <p> Total vendus : <span class="fw-bold"> <%= total_vendus(@produit) %> </span> </p> 
-        <p> Restant : <span class="fw-bold"> <%= produits_restants(@produit) %> </span> </p> 
+        <p> Restant : <span class="fw-bold"> <%= produits_restants(@produit, Time.now.to_date) %> </span> </p> 
 
 
         <%= badge_disponibilite(@produit, Time.now.to_date) %>
