--- a/app/views/admin_parameters/_admin_parameter.html.erb
+++ b/app/views/admin_parameters/_admin_parameter.html.erb
@@ -1,5 +1,5 @@
 <div id="<%= dom_id admin_parameter %>" class="my-2">
-  <div class="card mx-2 mb-3 light-beige-colored shadow-sm">
+  <div class="card mx-2 mb-3 p-2 light-beige-colored shadow-sm">
     <p>
       <strong>Tx tva:</strong>
       <%= admin_parameter.tx_tva %>
