--- a/app/views/commandes/_footer.html.erb
+++ b/app/views/commandes/_footer.html.erb
@@ -1,26 +1,18 @@
-<div class="d-flex align-items-center justify-content-evenly mx-2 p-2">
-
-    <%= custom_badge("", @commande.ref_commande, "secondary", "") %>
-    <%= custom_badge("", @commande.client.full_name, "secondary", "") %>
-
-    <%= render 'synthese' %>
-    
-    <button class="btn btn-primary fa fa-bounce" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
-           <i class="fa fa-file me-1"></i>
-    </button>
-
-    <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
-        <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Type d'édition</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+<div class="container-fluid">
+    <div class="row mx-2 p-2">
+        <div class="col-2 text-start">
+            <%= custom_badge("", @commande.ref_commande, "secondary", "") %>        
         </div>
-        <div class="offcanvas-body">
-
-            <%= render 'doc_editions/new' %>
-
+        <div class="col-8">
+            <div class="d-flex align-items-center justify-content-center">
+                <%= custom_badge("", @commande.client.full_name, "secondary", "") %>
+                <%= render 'synthese' %>
+            </div>
         </div>
-    </div-->
-
-
+        <div class="col-2 text-end">
+                <button class="btn btn-primary fa fa-bounce" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
+                    <i class="fa fa-file me-1"></i>
+                </button>
+        </div>
+    </div>
 </div>
-
