--- a/app/views/commandes/_form.html.erb
+++ b/app/views/commandes/_form.html.erb
@@ -34,12 +34,19 @@
         </div>
       </div>
 
+      <div class="input-group mb-1">
+        <%= form.label :typeevent, class: "input-group-text" %>
+        <%= form.select :typeevent, Commande::EVENEMENTS_OPTIONS, { include_blank: 'Select' }, class: "form-select" %>
+      </div>
+      
       <%= custom_form_elements(form, 
         [:montant, :text_field], [:description, :text_area], 
         [:debutloc, :date_field], [:finloc, :date_field], [:dateevent, :date_field],
-        [:statutarticles, :text_field], [:typeevent, :text_field], 
+        [:statutarticles, :text_field], 
         [:commentaires, :text_area], [:commentaires_doc, :text_area], [:devis, :check_box]
       ) %>
+
+
 
 
       <div class="container-fluid d-flex">
