ajout des champs de recherches sur les differents mdoels

--- a/app/views/admin_parameters/index.html.erb
+++ b/app/views/admin_parameters/index.html.erb
@@ -1,5 +1,5 @@
 
-<%= bandeau_entete("Paramètres admin", "shirt","", "your-search") %>
+<%= bandeau_entete("Paramètres admin", "screwdriver-wrench","", "") %>
 
 <%= bloc_nouveau(AdminParameter) %>
 
