--- a/app/views/categorie_produits/index.html.erb
+++ b/app/views/categorie_produits/index.html.erb
@@ -1,4 +1,4 @@
-<%= bandeau_entete("Catégories produits", "layer-group", @categorie_produits.count, "your-search") %>
+<%= bandeau_entete("Catégories produits", "layer-group", @categorie_produits.count, :nom_cont) %>
 
 <%= bloc_nouveau(CategorieProduit) %>
 
