--- a/app/views/couleurs/index.html.erb
+++ b/app/views/couleurs/index.html.erb
@@ -1,4 +1,4 @@
-<%= bandeau_entete("Couleurs", "paint", @couleurs.count, "your-search") %>
+<%= bandeau_entete("Couleurs", "paint", @couleurs.count, :nom_cont) %>
 
 <%= bloc_nouveau(Couleur) %>
 
