--- a/app/views/ensembles/index.html.erb
+++ b/app/views/ensembles/index.html.erb
@@ -1,5 +1,5 @@
 
-<%= bandeau_entete("Ensembles", "group", @ensembles.count, "your-search") %>
+<%= bandeau_entete("Ensembles", "group", @ensembles.count, :produit_nom_cont) %>
 
 <%= bloc_nouveau(Ensemble) %>
 
