--- a/app/views/etiquettes/index.html.erb
+++ b/app/views/etiquettes/index.html.erb
@@ -1,6 +1,6 @@
-<%= bandeau_entete("Etiquettes", "shirt", "", "your-search") %>
+<%= bandeau_entete("Etiquettes", "shirt", "", "") %>
 
-<div class="">
+<div class="mx-2">
 
     <%= form_tag edition_etiquettes_path, method: :get, format: :pdf do %>
       <div class="input-group mb-1">
