--- a/app/views/fournisseurs/index.html.erb
+++ b/app/views/fournisseurs/index.html.erb
@@ -1,4 +1,4 @@
-<%= bandeau_entete("Fournisseurs", "layer-group", @fournisseurs.count, "your-search") %>
+<%= bandeau_entete("Fournisseurs", "layer-group", @fournisseurs.count, :nom_or_tel_or_mail_cont) %>
 
 <%= bloc_nouveau(Fournisseur) %>
 
