--- a/app/views/produits/index.html.erb
+++ b/app/views/produits/index.html.erb
@@ -1,4 +1,5 @@
-<%= bandeau_entete("Produits", "shirt", @produits.count, "your-search") %>
+<%= bandeau_entete("Produits", "shirt", @produits.count, 
+  :nom_or_prixvente_or_prixlocation_or_reffrs_or_handle_or_categorie_produit_nom_or_type_produit_nom_or_couleur_nom_or_taille_nom_cont) %>
 
 <%= bloc_nouveau(Produit) %>
 
