--- a/app/views/tailles/index.html.erb
+++ b/app/views/tailles/index.html.erb
@@ -1,4 +1,4 @@
-<%= bandeau_entete("tailles", "paint", @tailles.count, "your-search") %>
+<%= bandeau_entete("tailles", "paint", @tailles.count, :nom_cont) %>
 
 <%= bloc_nouveau(Taille) %>
 
