--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,19 +1,27 @@
 /*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
  *= require_tree .
  *= require_self
  */
 
+
+ /* scroll bar */
+
+ ::-webkit-scrollbar {
+   width: 5px; /* Width of the vertical scrollbar */
+ }
+ 
+ ::-webkit-scrollbar-thumb {
+   background-color: #717171; /* Color of the scrollbar thumb */
+   border-radius: 8px; /* Rounded corners for the thumb */
+ }
+ 
+ ::-webkit-scrollbar-thumb:hover {
+   background-color: #b7b7b7; /* Color of the thumb on hover */
+ }
+ 
+ ::-webkit-scrollbar-track {
+   background-color: #b7b7b7; /* Color of the scrollbar track */
+ }
 
 
  .brand-colored{
