--- a/app/views/commandes/new.html.erb
+++ b/app/views/commandes/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New commande</h1>
+<%= bandeau_entete_simple("Nouvelle commande", "file-invoice") %>
 
 <%= render "form", commande: @commande %>
 
