--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,4 +1,4 @@
-<%= bandeau_entete("Profiles", "user-circle", @profiles.count, "your-search") %>
+<%= bandeau_entete("Profiles", "user-circle", @profiles.count, :nom_or_prenom_cont) %>
 
 <%= bloc_nouveau(Profile) %>
 
