--- a/app/views/stock/index.html.erb
+++ b/app/views/stock/index.html.erb
@@ -1,5 +1,5 @@
 
-<%= bandeau_entete("Stock", "box", "", "your-search") %>
+<%= bandeau_entete("Stock", "box", "", "") %>
 
 
 <div class="card mx-2 my-3 light-beige-colored shadow-sm">
