--- a/app/views/type_produits/index.html.erb
+++ b/app/views/type_produits/index.html.erb
@@ -1,5 +1,5 @@
 
-<%= bandeau_entete("Types produits", "layer-group", @type_produits.count, "your-search") %>
+<%= bandeau_entete("Types produits", "layer-group", @type_produits.count, :nom_cont) %>
 
 <%= bloc_nouveau(TypeProduit) %>
 
