--- a/app/views/produits/_form.html.erb
+++ b/app/views/produits/_form.html.erb
@@ -1,4 +1,4 @@
-<%= turbo_frame_tag "produit_form" do %>
+<%#= turbo_frame_tag "produit_form" do %>
 
   <div class="card mx-2 mt-3 p-2 light-beige-colored shadow-sm">
 
@@ -18,69 +18,65 @@
       <%= custom_form_elements(form, 
         [:nom, :text_field] ) %>
 
-      <div class="mx-1 px-2">
-        <div class="input-group input-group">
+      <div class="container-fluid">
+        <div class="input-group input-group mb-1">
           <%= form.label :categorie_produit_id, class: "input-group-text" %>
           <%= form.collection_select :categorie_produit_id, @categorie_produits.all.order(:nom), :id, :nom, 
-          { include_blank: 'Select' }, class: "form-select" %>
+          { include_blank: 'Sélectionner' }, class: "form-select" %>
         </div>
-      </div>
 
-      <div class="mx-1 px-2">
-        <div class="input-group input-group">
+        <div class="input-group input-group mb-1">
           <%= form.label :type_produit_id, class: "input-group-text" %>
           <%= form.collection_select :type_produit_id, @type_produits.all.order(:nom), :id, :nom, 
-          { include_blank: 'Select' }, class: "form-select" %>
+          { include_blank: 'Sélectionner' }, class: "form-select" %>
         </div>
-      </div>
 
-      <div class="input-group input-group mx-1 px-2">
-        <%= form.label :prixvente, "prix vente TTC", class: "input-group-text" %>
-        <%= form.number_field :prixvente, class: "form-control" %>
-      </div>
+        <div class="input-group input-group mb-1">
+          <%= form.label :prixvente, "prix vente TTC", class: "input-group-text" %>
+          <%= form.number_field :prixvente, class: "form-control" %>
+        </div>
 
-      <div class="input-group input-group mx-1 px-2">
-        <%= form.label :prixlocation, "prix location TTC", class: "input-group-text" %>
-        <%= form.number_field :prixlocation, class: "form-control" %>
-      </div>
+        <div class="input-group input-group mb-1">
+          <%= form.label :prixlocation, "prix location TTC", class: "input-group-text" %>
+          <%= form.number_field :prixlocation, class: "form-control" %>
+        </div>
 
-      <%= custom_form_elements(form, 
-        [:description, :text_area], 
-        [:handle, :text_field], [:reffrs, :text_field], [:quantite, :number_field],
-        [:fournisseur_id, :text_field], [:dateachat, :date_field]
-      ) %>
+        <%= custom_form_elements(form, 
+          [:description, :text_area], 
+          [:handle, :text_field], [:reffrs, :text_field], [:quantite, :number_field],
+          [:fournisseur_id, :text_field], [:dateachat, :date_field]
+        ) %>
 
-      <div class="input-group input-group mx-1 px-2">
-        <%= form.label :prixachat, "prix achat HT", class: "input-group-text" %>
-        <%= form.number_field :prixachat, class: "form-control" %>
-      </div>
+        <div class="input-group input-group mb-1">
+          <%= form.label :prixachat, "prix achat HT", class: "input-group-text" %>
+          <%= form.number_field :prixachat, class: "form-control" %>
+        </div>
 
-      <div class="input-group mb-1">
-        <%= form.label :image_principale, class:"input-group-text label-with-format" %>
-        <%= form.file_field :image1, class:"form-control m-1 p-1" %>
-      </div>
-      
-      <div class="input-group mb-1">
-        <%= form.label :images, class:"input-group-text label-with-format" %>
-        <%= form.file_field :images, multiple: true, class:"form-control m-1 p-1" %>
-      </div>
+        <div class="input-group mb-1">
+          <%= form.label :image_principale, class:"input-group-text label-with-format" %>
+          <%= form.file_field :image1, class:"form-control m-1 p-1" %>
+        </div>
+        
+        <div class="input-group mb-1">
+          <%= form.label :images, class:"input-group-text label-with-format" %>
+          <%= form.file_field :images, multiple: true, class:"form-control m-1 p-1" %>
+        </div>
 
 
-      <div class="mx-1 px-2">
-        <div class="input-group input-group">
+        <div class="input-group mb-1">
           <%= form.label :couleur_id, class: "input-group-text" %>
           <%= form.collection_select :couleur_id, @couleurs.all.order(:nom), :id, :nom, 
-          { include_blank: 'Select' }, class: "form-select" %>
+          { include_blank: 'Sélectionner' }, class: "form-select" %>
         </div>
-      </div>
 
-      <div class="mx-1 px-2">
-        <div class="input-group input-group">
+        <div class="input-group mb-1">
           <%= form.label :taille_id, class: "input-group-text" %>
           <%= form.collection_select :taille_id, @tailles.all.order(:nom), :id, :nom, 
-          { include_blank: 'Select' }, class: "form-select" %>
+          { include_blank: 'Sélectionner' }, class: "form-select" %>
         </div>
+
       </div>
+
 
       <%= custom_submit_button(form) %>
 
@@ -89,4 +85,4 @@
   
   </div>
 
-<% end %>
+<%# end %>
