--- a/app/views/meetings/_meetings.html.erb
+++ b/app/views/meetings/_meetings.html.erb
@@ -1,5 +1,5 @@
 <%= card_main_model(
-  "Meetings", 
+  "Rendez-vous", 
   "calendar", 
   link_to("", "#collapseNewMeeting", 
   class: "fa fa-plus btn btn-warning fw-bold", 
