--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -4,6 +4,12 @@
  */
 
 
+ body {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: medium;
+}
+
+
  /* scroll bar */
 
  ::-webkit-scrollbar {
