--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -5,18 +5,22 @@
     <div class="row d-flex align-items-center">
 
       <div class="col-2 text-center">
-        <%= image_tag(article.produit.default_image, width: 100, class: "rounded") %>  
+        <%= image_tag(article.produit.default_image, class: "img-produit rounded") %>  
       </div>
     
       <div class="col ps-4">
 
-        <h4 class="fw-bold"> <%= article.produit.nom %>  </h4>
+        <h5 class="fw-bold"> <%= article.produit.nom %>  </h5>
 
        <span class="fw-bold"> <%= article.locvente %> </span>
         qté.: <%= article.quantite %>  
-        prix: <%= article.prix %>  
-        total: <%= article.total %>  
-        caution: <%= article.caution %>  
+        prix: <%= custom_currency_no_decimals_format(article.prix) %>  
+        total: <%= custom_currency_no_decimals_format(article.total) %>  
+
+        <% if article.caution %>
+          caution: <%= custom_currency_no_decimals_format(article.caution)  %>
+        <% end %>
+        
 
         <%= article.longueduree ? "longue durée" : "" %>
     
@@ -31,7 +35,7 @@
 
       </div>
 
-      <div class="col text-end">
+      <div class="col-2 text-end">
         <%= link_to "", "#collapseArticle#{dom_id(article)}", class: "btn btn-sm btn-primary fa fa-eye m-1", "data-bs-toggle": "collapse", role: "button", "aria-expanded": "false", "aria-controls": "collapseArticle#{dom_id(article)}" %>
         <%= button_to "", edit_article_path(article), method: :post, class: "btn btn-sm btn-secondary fa-solid fa-pen-to-square m-1" %>
         <%= button_to "", article, method: :delete,  
