--- a/app/views/clients/_client_mini.html.erb
+++ b/app/views/clients/_client_mini.html.erb
@@ -14,7 +14,7 @@
     </div>
     
     <div class="col-2 text-end">
-        <%= link_to "", "#collapseClient", class: "btn btn-primary fa fa-eye", "data-bs-toggle": "collapse", role: "button", "aria-expanded": "false", "aria-controls": "collapseExample" %>
+        <%= link_to "", "#collapseClient", class: "btn btn-sm btn-primary fa fa-eye", "data-bs-toggle": "collapse", role: "button", "aria-expanded": "false", "aria-controls": "collapseExample" %>
     </div>
   </div>
   
