--- a/app/views/meetings/_meeting.html.erb
+++ b/app/views/meetings/_meeting.html.erb
@@ -1,18 +1,29 @@
 
 <div id="<%= dom_id meeting %>" class="my-2">
 
-  <div class="card mx-2 my-3 p-3 light-beige-colored shadow-sm">
+  <div class="card mx-2 mb-3 p-3 light-beige-colored shadow-sm">
 
-    <p>
+    <div class="d-flex flex-col">
       <strong>Nom:</strong>
       <%= meeting.nom %>
-    </p>
 
-    <p>
-      <strong>Date:</strong>
-      <%= l(meeting.datedebut , format: :short) %> -
-      <%= l(meeting.datefin , format: :short) %>
-    </p>
+      <div class="badge text-dark mx-1">
+        <i class="fa fa-calendar"></i>
+        <%= l(meeting.datedebut , format: :short) %> -
+        <%= l(meeting.datefin , format: :short) %>      
+      </div>
+
+      <% if meeting.lieu.present? %>
+
+        <div class="badge text-dark">
+          <i class="fa fa-map"></i>
+          <%= meeting.lieu %>     
+        </div>
+
+      <% end %>
+
+    </div>
+    
 
     <% if meeting.commande %>
       <% unless controller_name == 'commandes' && action_name == 'show' %>
@@ -29,13 +40,7 @@
         <%= meeting.client.full_name %>
       </p>
     <% end %>
-    
-    <% if meeting.lieu.present? %>
-      <p>
-        <strong>Lieu:</strong>
-        <%= meeting.lieu %>
-      </p>    
-    <% end %>
+
     
     <%= links_record(meeting) %>  
 
