--- a/app/views/paiement_recus/_paiement_recu.html.erb
+++ b/app/views/paiement_recus/_paiement_recu.html.erb
@@ -1,6 +1,6 @@
 <div id="<%= dom_id paiement_recu %>">
 
-  <div class="card mx-2 mb-1 p-2 light-beige-colored shadow-sm">
+  <div class="card mx-2 mb-3 p-2 light-beige-colored shadow-sm">
 
     <div class="row d-flex align-items-center">
 
@@ -10,12 +10,13 @@
         <%= custom_currency_format(paiement_recu.montant) %>
         <%= "par #{paiement_recu.moyen}" if paiement_recu.moyen.present? %>
 
+        <%= link_to "", "#collapsePaiementRecu#{dom_id(paiement_recu)}", class: "btn btn-sm btn-primary fa fa-eye m-1", "data-bs-toggle": "collapse", role: "button", "aria-expanded": "false", "aria-controls": "collapsePaiementRecu#{dom_id(paiement_recu)}" %>
+
       </div>
 
-      <div class="col text-end">
-        <%= link_to "", "#collapsePaiementRecu#{dom_id(paiement_recu)}", class: "btn btn-sm btn-primary fa fa-eye m-1", "data-bs-toggle": "collapse", role: "button", "aria-expanded": "false", "aria-controls": "collapsePaiementRecu#{dom_id(paiement_recu)}" %>
-        <%= button_to "", edit_paiement_recu_path(paiement_recu), method: :post, class: "btn btn-sm btn-secondary fa-solid fa-pen-to-square m-1" %>
-        <%= button_to "", paiement_recu, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-sm m-1 btn-danger fa-solid fa-trash m-1" %>
+
+      <div class="text-end">
+        <%= links_record(paiement_recu) %>  
       </div>
 
     </div>
