format divers - uniqueness couleur et taille et capitalisation

--- a/app/views/shared/_navbar_admin.html.erb
+++ b/app/views/shared/_navbar_admin.html.erb
@@ -15,9 +15,11 @@
         <%= nav_link(analyses_index_path, "Analyses", "fa-chart-line") %>
         <%= nav_link(root_path, "Marketing", "fa-bullhorn") %>
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-primary" type="submit">Search</button>
+      <!--form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Recherche..." aria-label="Search">
+        <button class="btn btn-outline-primary" type="submit">
+          <i class="fa-solid fa-xl fa-magnifying-glass"></i>
+        </button-->
       </form>
     </div>
   </div>
